14727
Over lists I can do:
{code}
scala> val xs= List(1, 2, 3)
xs: List[Int] = List(1, 2, 3)

scala> (xs, xs).zipped map (_ + _)
res3: List[Int] = List(2, 4, 6)
{code}
But the same over arrays gives:
{code}
scala> val xs = Array(1, 2, 3)
xs: Array[Int] = Array(1, 2, 3)

scala> (xs, xs).zipped map (_ + _)
<console>:6: error: could not find implicit value for parameter w1: <:<[Array[Int],scala.collection.TraversableLike[El1,Repr1]]
       (xs, xs).zipped map (_ + _)
                ^
{code}
